src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Advisory Resource Group</fullName>
        <description>This is for the Retail Sales Process.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Finals%2FPricing</fullName>
        </values>
        <values>
            <fullName>Investment Meeting</fullName>
        </values>
        <values>
            <fullName>Qualifying</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Institutional Opportunity Process</fullName>
        <description>This is the Institutional Sales Process for a New Business.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Contracting</fullName>
        </values>
        <values>
            <fullName>Finals</fullName>
        </values>
        <values>
            <fullName>Funded</fullName>
        </values>
        <values>
            <fullName>Pending Flow</fullName>
        </values>
        <values>
            <fullName>Qualify</fullName>
        </values>
        <values>
            <fullName>Semi-Finals</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Retail External Sales</fullName>
        <description>Test sales process for retail external sales team</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ARG_Sub_Type__c</fullName>
        <label>Asset Source</label>
        <picklist>
            <controllingField>ARG_Type__c</controllingField>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wealth Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advisory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brokerage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fund-of-Funds</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ARG_Type__c</fullName>
        <description>Available only in Retail opportunity</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Available on Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recommended List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Model</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Actual_Closed_Date__c</fullName>
        <label>Actual Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amount_Cal__c</fullName>
        <formula>Amount__c / 100000000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount (Cal)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <infoMessage>Results are pre-filtered for this Organization, click &quot;Show All Results&quot; to expand search results.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Client Contact)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed_Reason__c</fullName>
        <label>Closed Reason</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Capacity (vehicle related)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting Rating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Specific Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reputation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unique guideline requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value of Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle not available for US entities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Specific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost to Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$3mm into Bond fund replaced AMF BofA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Better Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Better Price, Better References</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Better Price, Superior Salesmanship, Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Better References</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIT would take too long to establish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in mandate reqmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client ceased mandate search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client wanted &apos;pure&apos; HC fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client wanted deeper value fund.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributionn concerns - NPW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t Know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t Know, Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completed_Status_Date__c</fullName>
        <label>Completed Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Conf__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conf</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consultant_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consultant Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Consultant__c</valueField>
            </filterItems>
            <infoMessage>Results are pre-filtered for this Organization, click &quot;Show All Results&quot; to expand search results.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Consultant Contact)</relationshipLabel>
        <relationshipName>Consultant_Contact_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consultant</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type__c</field>
                <operation>equals</operation>
                <value>Investment Consultant</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, Sint Eustatius and Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Competitor A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DCI_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DCI Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <formula>TEXT(Account.Distribution_Sub_Channel__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribution Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration_Completed__c</fullName>
        <formula>IF(ISPICKVAL(Onboarding_Status__c,&apos;Complete&apos;),NOW()-Completed_Status_Date__c,IF(NOW()-Completed_Status_Date__c&gt;0,NOW()-Completed_Status_Date__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration: Completed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_In_Progress__c</fullName>
        <formula>IF(ISPICKVAL(Onboarding_Status__c,&apos;In Progress&apos;),NOW()-In_Progress_Status_Date__c,
IF(Completed_Status_Date__c-In_Progress_Status_Date__c&gt;0,Completed_Status_Date__c-In_Progress_Status_Date__c,0) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration: In Progress</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_Not_Started__c</fullName>
        <formula>IF(ISPICKVAL(Onboarding_Status__c,&apos;Not Started&apos;),NOW()-New_Status_Date__c,IF(In_Progress_Status_Date__c-New_Status_Date__c&gt;0,In_Progress_Status_Date__c-New_Status_Date__c, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration: Not Started</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Funding_Date__c</fullName>
        <label>Estimated Funding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Strategy_Name__c</fullName>
        <label>First Strategy Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Progress_Status_Date__c</fullName>
        <label>In Progress Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Initial_Flow__c</fullName>
        <inlineHelpText>Please enter currency amount.</inlineHelpText>
        <label>Initial Flow</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Institutional_Tier__c</fullName>
        <formula>TEXT(Account.Institutional_Tier__c)</formula>
        <label>Institutional Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Consultant__c</fullName>
        <label>Consultant?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Japan_Opportunity_ID__c</fullName>
        <label>Japan Opportunity ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manager_Email__c</fullName>
        <label>Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>New_Status_Date__c</fullName>
        <label>New Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>No_Of_Known_Item__c</fullName>
        <label># Of Known Item</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Is_Unknown__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Notification_Date__c</fullName>
        <label>Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notify_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Num_Rejected_Products__c</fullName>
        <label>#Rejected Products</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Approval_Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Onboarding_Status__c</fullName>
        <label>Onboarding Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunities_Closing_in_3_months__c</fullName>
        <formula>IF(CloseDate &gt;= Today()  &amp;&amp; CloseDate &lt;= (Today() + 90), CloseDate, null)</formula>
        <label>Opportunities Closing in 3 months</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunities_Closing_in_6_months__c</fullName>
        <formula>IF(CloseDate &gt;= Today()  &amp;&amp; CloseDate &lt;= (Today() + 180), CloseDate, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunities Closing in 6 months</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Age__c</fullName>
        <formula>TODAY()  -  DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Age (In Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Platform__c</fullName>
        <label>Opportunity Platform</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgisConf__c</fullName>
        <formula>Account.Confidential__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OrgisConf</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initial Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Manager__c</fullName>
        <formula>Owner.Manager.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMAPS__PMAPS_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PMAPS WebPro Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>PMAPS_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMAPS__PMAPS_Proposal_ID__c</fullName>
        <label>PMAPS Proposal ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <label>Portfolio</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probability_Value__c</fullName>
        <formula>IF( Probability  &lt;= 0.25, &apos;Low&apos;, IF( (Probability &gt; 0.25 &amp;&amp;  Probability &lt;= 0.75), &apos;Medium&apos;, &apos;High&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Probability Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_12_mo_flow__c</fullName>
        <label>Projected 12 Month Flow</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Record_Keeper__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Record Keeper</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Record Keeper)</relationshipLabel>
        <relationshipName>Record_Keeper</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Opportunity Region</label>
        <picklist>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Pac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATAM &amp; Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US - Mid-Atlantic &amp; Southeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US - Midwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US - Northeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rollup_Contact_Role__c</fullName>
        <description>Role1 - Name1; Role2 - Name2; ...</description>
        <label>Rollup - Contact Role</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rollup_Strategy__c</fullName>
        <label>Products</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Saleslogix_ID__c</fullName>
        <externalId>true</externalId>
        <label>Saleslogix ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Onboarding_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Start Onboarding Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isClosed__c</fullName>
        <formula>IF((TEXT(StageName) == &apos;Closed Won&apos; || TEXT(StageName) == &apos;Closed Lost&apos;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isClosed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_days_lapsed_without_an_activity__c</fullName>
        <formula>TODAY() - Last_Activity_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of days lapsed without an activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Retail_External_Sales,Opportunity.Institutional_New_Business,Opportunity.Retail_Professional_Buyer</value>
        </filters>
        <label>Opportunity Pipeline</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>My_Opportunities_Closing_in_3_months</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <filters>
            <field>Opportunities_Closing_in_3_months__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>My Opportunities - Closing in 3 months</label>
        <language>en_US</language>
        <sharedTo>
            <role>DC</role>
            <role>DC_LS</role>
            <role>External_LS</role>
            <role>Externals</role>
            <role>Global_Retail_LS</role>
            <role>Non_US_Retail</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Opportunities_Closing_in_6_month</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <filters>
            <field>Opportunities_Closing_in_6_months__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>My Opportunities - Closing in 6 month</label>
        <language>en_US</language>
        <sharedTo>
            <role>DC</role>
            <role>DC_LS</role>
            <role>External_LS</role>
            <role>Externals</role>
            <role>Global_Retail_LS</role>
            <role>Non_US_Retail</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Opportunities_Lost</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Lost</value>
        </filters>
        <label>My Opportunities - Lost</label>
        <language>en_US</language>
        <sharedTo>
            <role>DC</role>
            <role>DC_LS</role>
            <role>External_LS</role>
            <role>Externals</role>
            <role>Global_Retail_LS</role>
            <role>Non_US_Retail</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Opportunities_Open</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>My Opportunities - Open</label>
        <language>en_US</language>
        <sharedTo>
            <role>DC</role>
            <role>DC_LS</role>
            <role>External_LS</role>
            <role>Externals</role>
            <role>Global_Retail_LS</role>
            <role>Non_US_Retail</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Opportunities_Won</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </filters>
        <label>My Opportunities - Won</label>
        <language>en_US</language>
        <sharedTo>
            <role>DC</role>
            <role>DC_LS</role>
            <role>External_LS</role>
            <role>Externals</role>
            <role>Global_Retail_LS</role>
            <role>Non_US_Retail</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Team_s_Opportunities_ClosingIn6Month</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <filters>
            <field>Opportunities_Closing_in_6_months__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>My Team’s Opportunities ClosingIn6Month</label>
        <language>en_US</language>
        <sharedTo>
            <role>DC</role>
            <role>DC_LS</role>
            <role>External_LS</role>
            <role>Externals</role>
            <role>Global_Retail_LS</role>
            <role>Non_US_Retail</role>
        </sharedTo>
    </listViews>
</CustomObject>